[package]
name = "vsbf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linker"
[[bin]]
name = "loader"
[[bin]]
name = "objdump"

[dependencies]
bitflags = { version = "2.6.0", features = ["bytemuck"] }
libc = "0.2.158"
nom = "7.1.3"

capstone = "0.12.0"
unicorn-engine = { version = "2.1.1", default-features = false, features = [
    "arch_x86",
] }
